# transcribe

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/transcribe_tool/: __init__.py  audio_io.py  cli.py  config.py  constants.py  diarization.py  emotion.py  output.py  prefetch.py  runtime.py  speaker_id.py  transcription.py  types.py
src/transcribe_tool/utils/: __init__.py  timecode.py
tests/: test_config.py
